--- a/style.css
+++ b/style.css
@@ -28,6 +28,11 @@ body {
     color: var(--text-colour);
 }
 
+section {
+    min-height: 100vh;
+    padding: 10rem 9% 2rem;
+}
+
 .header {
     position: fixed;
     top: 0;
@@ -52,4 +57,24 @@ body {
     font-size: 1.7rem;
     color: var(--text-colour);
     margin-left: 4rem;
+    transition: 3s;
+}
+.navbar a.hover,
+.navbar a:active {
+    color: var(--main-colour);
+}
+
+#manu-item {
+    font-size: 3.6rem;
+    color: var(--text-colour);
+    display: none;
+}
+
+.home {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.home-img {
+    size: 50%;
 }
